k8s/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: claro-cenam
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: claro-cenam
  namespace: claro-cenam
  labels:
    app: claro-cenam
spec:
  replicas: 1
  selector:
    matchLabels:
      app: claro-cenam
  template:
    metadata:
      labels:
        app: claro-cenam
    spec:
      containers:
        - name: web
          image: nginxinc/nginx-unprivileged:1.27-alpine
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 128Mi
          volumeMounts:
            - name: html
              mountPath: /usr/share/nginx/html
      volumes:
        - name: html
          configMap:
            name: claro-cenam-html
---
apiVersion: v1
kind: Service
metadata:
  name: claro-cenam
  namespace: claro-cenam
  labels:
    app: claro-cenam
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: claro-cenam
