k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: claro-cenam
  namespace: claro-cenam
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: claro-cenam.46-250-173-157.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: claro-cenam
                port:
                  number: 80
